inou/prp/tests/errors/underflow_unsigned_expr.prp
/*
:name: underflow_unsigned_expr
:type: error
:error: does not fit
*/

// A signed expression whose value is negative does not fit an unsigned
// destination. Use an explicit bit-select to force the bit pattern.
//
// The "does not fit" diagnostic is located via the declare/store loc-carry
// chain (prp2lnast attach_loc -> prp_copy_one_node -> runner emit_push) plus
// bitwidth's per-var write-site map (note_write_site), which lets even the
// end_run deferred envelope check point at the offending store line.

mut v8:s8 = -1
const ones = v8 | 0xff

//mut c_ok:u8 = nil
//wrap c_ok = ones
//cassert(c_ok == 255)

const c:u8 = ones  // locate_error_here
